Work on challenge 7 at end of xml_challenge

--- a/xml_challenge.ipynb
+++ b/xml_challenge.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,19 +75,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_title_from_page_xml(page_xml):\n",
     "    \"\"\"Returns the title of the given page.\"\"\"\n",
+    "    \n",
     "    soup = BeautifulSoup(page_xml, 'lxml')\n",
     "    return soup.select_one('title').text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -98,7 +99,7 @@
        "19822"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -200,27 +201,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_text_from_page_xml(page):\n",
     "    \"\"\"Returns the text of the given page.\"\"\"\n",
-    "    pass"
+    "    soup = BeautifulSoup(page, 'lxml')\n",
+    "    return soup.select_one('text').text\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(None, NoneType)"
+       "('#REDIRECT [[Computer accessibility]]\\n\\n{{R from move}}\\n{{R from CamelCase}}\\n{{R unprintworthy}}',\n",
+       " str)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -280,27 +283,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>None</td>\n",
+       "      <td>#REDIRECT [[Computer accessibility]]\\n\\n{{R fr...</td>\n",
        "      <td>AccessibleComputing</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>None</td>\n",
+       "      <td>{{redirect2|Anarchist|Anarchists|the fictional...</td>\n",
        "      <td>Anarchism</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>None</td>\n",
+       "      <td>#REDIRECT [[History of Afghanistan]]\\n\\n{{Redi...</td>\n",
        "      <td>AfghanistanHistory</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>None</td>\n",
+       "      <td>#REDIRECT [[Geography of Afghanistan]]\\n\\n{{Re...</td>\n",
        "      <td>AfghanistanGeography</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>None</td>\n",
+       "      <td>#REDIRECT [[Demographics of Afghanistan]]\\n\\n{...</td>\n",
        "      <td>AfghanistanPeople</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -308,15 +311,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   text                 title\n",
-       "0  None   AccessibleComputing\n",
-       "1  None             Anarchism\n",
-       "2  None    AfghanistanHistory\n",
-       "3  None  AfghanistanGeography\n",
-       "4  None     AfghanistanPeople"
+       "                                                text                 title\n",
+       "0  #REDIRECT [[Computer accessibility]]\\n\\n{{R fr...   AccessibleComputing\n",
+       "1  {{redirect2|Anarchist|Anarchists|the fictional...             Anarchism\n",
+       "2  #REDIRECT [[History of Afghanistan]]\\n\\n{{Redi...    AfghanistanHistory\n",
+       "3  #REDIRECT [[Geography of Afghanistan]]\\n\\n{{Re...  AfghanistanGeography\n",
+       "4  #REDIRECT [[Demographics of Afghanistan]]\\n\\n{...     AfghanistanPeople"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,17 +354,196 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df['text_length'] = df['text'].map(lambda x: len(x))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>title</th>\n",
+       "      <th>text_length</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>#REDIRECT [[Computer accessibility]]\\n\\n{{R fr...</td>\n",
+       "      <td>AccessibleComputing</td>\n",
+       "      <td>94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>{{redirect2|Anarchist|Anarchists|the fictional...</td>\n",
+       "      <td>Anarchism</td>\n",
+       "      <td>102191</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>#REDIRECT [[History of Afghanistan]]\\n\\n{{Redi...</td>\n",
+       "      <td>AfghanistanHistory</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>#REDIRECT [[Geography of Afghanistan]]\\n\\n{{Re...</td>\n",
+       "      <td>AfghanistanGeography</td>\n",
+       "      <td>92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>#REDIRECT [[Demographics of Afghanistan]]\\n\\n{...</td>\n",
+       "      <td>AfghanistanPeople</td>\n",
+       "      <td>95</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                text                 title  \\\n",
+       "0  #REDIRECT [[Computer accessibility]]\\n\\n{{R fr...   AccessibleComputing   \n",
+       "1  {{redirect2|Anarchist|Anarchists|the fictional...             Anarchism   \n",
+       "2  #REDIRECT [[History of Afghanistan]]\\n\\n{{Redi...    AfghanistanHistory   \n",
+       "3  #REDIRECT [[Geography of Afghanistan]]\\n\\n{{Re...  AfghanistanGeography   \n",
+       "4  #REDIRECT [[Demographics of Afghanistan]]\\n\\n{...     AfghanistanPeople   \n",
+       "\n",
+       "   text_length  \n",
+       "0           94  \n",
+       "1       102191  \n",
+       "2           90  \n",
+       "3           92  \n",
+       "4           95  "
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>title</th>\n",
+       "      <th>text_length</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10165</th>\n",
+       "      <td>{{short description|Wikipedia list page}}\\n{{s...</td>\n",
+       "      <td>List of compositions by Johann Sebastian Bach</td>\n",
+       "      <td>432964</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15129</th>\n",
+       "      <td>{{about|the country}}\\n{{pp-semi-indef}}\\n{{pp...</td>\n",
+       "      <td>Pakistan</td>\n",
+       "      <td>376957</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15287</th>\n",
+       "      <td>{{Redirect|Philippine|the town in the Netherla...</td>\n",
+       "      <td>Philippines</td>\n",
+       "      <td>357950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9299</th>\n",
+       "      <td>{{Short description|Overview of relations}}{{U...</td>\n",
+       "      <td>Foreign relations of India</td>\n",
+       "      <td>317725</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8838</th>\n",
+       "      <td>{{short description|Aspect of history}}\\n{{pp-...</td>\n",
+       "      <td>History of India</td>\n",
+       "      <td>316816</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                    text  \\\n",
+       "10165  {{short description|Wikipedia list page}}\\n{{s...   \n",
+       "15129  {{about|the country}}\\n{{pp-semi-indef}}\\n{{pp...   \n",
+       "15287  {{Redirect|Philippine|the town in the Netherla...   \n",
+       "9299   {{Short description|Overview of relations}}{{U...   \n",
+       "8838   {{short description|Aspect of history}}\\n{{pp-...   \n",
+       "\n",
+       "                                               title  text_length  \n",
+       "10165  List of compositions by Johann Sebastian Bach       432964  \n",
+       "15129                                       Pakistan       376957  \n",
+       "15287                                    Philippines       357950  \n",
+       "9299                      Foreign relations of India       317725  \n",
+       "8838                                History of India       316816  "
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sort_values(by = ['text_length'], ascending=False).head()"
+   ]
   },
   {
    "cell_type": "code",
